--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,13 +20,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci --if-present
-    - run: npm run build --if-present
-    - run: npm install
-    - run: npm test
+    - name: Install Dependencies
+      run: npm ci
+    - name: Testing
+      run: npm test
