--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Install Dependencies
+    - name: Install env
       run: npm ci
+    - name: Install Dependencies
+      run: npm install
     - name: Testing
       run: npm test
