--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest --forceExit --detectOpenHandles --maxWorkers=1",
+    "test": "jest",
+    "testb": "jest --forceExit --detectOpenHandles --maxWorkers=1",
     "coverage": "jest --coverage"
   },
   "keywords": [],
