--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "jest",
-    "testb": "jest --forceExit --detectOpenHandles --maxWorkers=1",
+    "testb": "jest --passWithNoTests --forceExit --detectOpenHandles --maxWorkers=1",
     "coverage": "jest --coverage"
   },
   "keywords": [],
