--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
+  "modulePaths": ["<rootDir>"],
+  "rootDir": ".",
   "scripts": {
     "start": "nodemon server.js",
     "test": "jest",
