--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "testb": "jest --passWithNoTests --forceExit --detectOpenHandles --maxWorkers=1",
     "coverage": "jest --coverage"
   },
@@ -19,6 +19,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
