--- a/package.json
+++ b/package.json
@@ -23,5 +23,21 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>",
+      "/"
+    ],
+    "modulePaths": [
+      "<rootDir>",
+      "/"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "/routes",
+      "/models",
+      "/schemas"
+    ]
   }
 }
