Update Jest configuration in package.json

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "jest": {
     "roots": [
-      "<rootDir>"
+      "<rootDir>","/"
 
     ],
     "modulePaths": [
-      "<rootDir>"
+      "<rootDir>","/"
     ],
     "moduleDirectories": [
       "node_modules",
