--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -30,5 +30,5 @@ jobs:
       run: npm ci
     - name: Install Dependencies
       run: npm install
-    - name: Testing
+    - name: 🧪 Testing Suites
       run: npm test
