--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "nodemon src/server.js",
-    "test": "cross-env NODE_ENV=test jest --passWithNoTests --forceExit --detectOpenHandles --maxWorkers=1",
+    "test": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles --coverage --maxWorkers=1",
     "coverage": "jest --coverage"
   },
   "keywords": [],
